Fix height bug in select tag on Safari

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -154,6 +154,7 @@ body, button, select, input {
     border-radius: 5px;
     padding: 0.5em;
     min-height: 3em;
+    height: 3em;
 }
 
 main {
